# pv-circularity-simulator

./: .env.example  .gitattributes  .gitignore  API_REFERENCE.md  B05_SYSTEM_VALIDATION_README.md  CHANGELOG.md  CORE_INFRASTRUCTURE.md  FINANCIAL_DASHBOARD_DOCUMENTATION.md  IMAGE_UPLOAD_FEATURE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  INTEGRATION_COMPLETE.md  INTEGRATION_LAYER.md  Makefile  OPTIMIZATION_README.md  QUICKSTART.md  README.md  README_CELL_DESIGN.md  README_IEC61215.md  README_IEC61730.md  README_IEC_TESTING.md  README_MATERIALS_UI.md  README_MOUNTING.md  RUN.sh  SETUP.md  UNIFIED_APP_README.md  app.py  app_integrated.py  app_original.py  config.py  demo_dashboard.py  docker-compose.yml  example_usage.py  examples_usage.py  git_merge_script.sh  main.py  merge_strategy.py  pyproject.toml  pytest.ini  requirements-dev.txt  (+5 more)
.streamlit/: config.toml
config/: README.md  default.yaml  monitoring.yaml  scada_devices.yaml  settings.py
config/examples/: app_config.json  app_config.yaml  config_schema.yaml
config/mosquitto/: mosquitto.conf
config/prometheus/: prometheus.yml
data/: materials_db.json
docs/: API_DOCUMENTATION.md  B08_DIAGNOSTICS_MAINTENANCE.md  BIFACIAL_MODEL_DOCUMENTATION.md  CTM_LOSS_MODEL.md  DASHBOARD.md  GRIDDLER_INTEGRATION.md  IEC_61215_SIMULATOR.md  IRRADIANCE_MODELING.md  RECYCLING_ECONOMICS.md  SCAPS_WRAPPER.md  USER_GUIDE.md  forecast_dashboard_guide.md  grid_interaction.md  navigation_guide.md  thermal_modeling.md
docs/examples/: b08_demo.py
examples/: README.md  __init__.py  advanced_usage.py  asset_management_example.py  basic_itc_calculation.py  basic_optimization.py  basic_usage.py  basic_validation_example.py  bifacial_analysis_example.py  bom_generator_example.py  complete_irradiance_analysis.py  complete_tax_equity_example.py  config_example.json  configuration_usage.py  ctm_demo.py  demo_module.PAN  depreciation_example.py  ensemble_forecasting_example.py  example_ctm_testing.py  forecast_dashboard_example.py  forecasting_example.py  grid_integration_example.py  griddler_example.py  hydrogen_integration_example.py  iec_61215_example.py  ir_processing_example.py  itc_with_bonuses.py  iv_curve_analysis_example.py  module_builder_demo.py  module_export.json  module_temperature_demo.py  modules_comparison.csv  ptc_analysis.py  recycling_economics_example.py  repair_optimizer_example.py  repower_analysis_example.py  reuse_assessment_example.py  roi_calculator_demo.py  sample_data_generator.py  thermal_analysis_example.py  (+1 more)
modules/: __init__.py  analysis_suite.py  application_suite.py  circularity_suite.py  design_suite.py  image_processing_suite.py  monitoring_suite.py
modules/analysis/: __init__.py  iec_testing.py  system_design.py  weather_eya.py
modules/application/: __init__.py  analytics_reporting.py  financial_analysis.py  infrastructure.py
modules/circularity/: __init__.py  circularity_3r.py  hybrid_systems.py  revamp_repower.py
modules/design/: __init__.py  cell_design.py  materials_database.py  module_design.py
modules/monitoring/: __init__.py  energy_forecasting.py  fault_diagnostics.py  performance_monitoring.py
pages/: 1_📊_Energy_Analysis.py  2_📉_Performance.py  3_🔻_Losses.py  4_💰_Financial.py  5_📋_Reports.py  6_📈_Visualizations.py  README.md  __init__.py
pv_circularity_simulator/: __init__.py
pv_circularity_simulator/circularity/: __init__.py  reuse_assessor.py
pv_circularity_simulator/core/: __init__.py  enums.py  models.py
pv_circularity_simulator/data/: cell_types.json  materials_db.json  standards.json
pv_simulator/: __init__.py
scripts/: example_forecast.py  example_usage.py  setup_mosquitto_passwd.sh
src/: __init__.py  main.py  models.py
streamlit_app/: dashboard.py
tests/: __init__.py  conftest.py  test_B04_S04.py  test_authentication_manager.py  test_bifacial_model.py  test_bom_generator.py  test_configuration_manager.py  test_core.py  test_ctm_loss_model.py  test_forecaster.py  test_hybrid_system_ui.py  test_hydrogen_integration.py  test_integration.py  test_jwt_handler.py  test_material_recovery.py  test_models.py  test_navigation.py  test_optimization.py  test_password_handler.py  test_repower_analyzer.py  test_validation.py  test_wind_hybrid_integrator.py
ui/: __init__.py  app.py  mounting_structure_ui.py  system_design_app.py  system_validation_ui.py
utils/: __init__.py  constants.py  helpers.py  integrations.py  validators.py
(+543 files in other folders)
