[tool.poetry]
name = "pv-circularity-simulator"
version = "0.1.0"
description = "End-to-end PV lifecycle simulation platform with thermal modeling"
authors = ["PV Circularity Team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.0"
pydantic = "^2.6.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
pvlib = "^0.10.3"
plotly = "^5.18.0"
matplotlib = "^3.8.0"
scipy = "^1.12.0"
typing-extensions = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
